--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,18 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/abdb?createDatabaseIfNotExist=true
-spring.datasource.username= root
-spring.datasource.password= password
+spring.datasource.username=root
+spring.datasource.password=password
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto= update
+spring.jpa.hibernate.ddl-auto=update
 
 # show queries on console (to see hibernate generated queries on a console)
 spring.jpa.show-sql=true
-spring.main.allow-circular-references: true
+spring.main.allow-circular-references=true
 
 #server.port=8080
+
+# File upload configuration
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
